fixed contact link spacing for large resolution

--- a/styles/style.css
+++ b/styles/style.css
@@ -1851,4 +1851,8 @@ button[type="submit"]:hover {
   .contact-form {
     width: 65%;
   }
+
+  .contact-description {
+    margin-left: 58rem;
+  }
 }
